--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     }
 
     img {
-        width: 300px;   /* size change kar sakti ho */
+        width: 500px;   /* 🔼 yahan size bada kiya */
         border-radius: 12px;
 
-        /* 🔴 Red side glow effect */
+        /* 🔴 Red glow effect (same as before) */
         box-shadow:
             0 0 10px red,
             0 0 25px red,
@@ -29,7 +29,6 @@
 </head>
 <body>
 
-    <!-- yahan image ka exact naam likho -->
     <img src="gift.png" alt="My Image">
 
 </body>
