--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     }
 
     img {
-        width: 500px;   /* 🔼 yahan size bada kiya */
+        width: 500px;   /* size change kar sakti ho */
         border-radius: 12px;
 
-        /* 🔴 Red glow effect (same as before) */
+        /* 🔴 Red side glow effect */
         box-shadow:
             0 0 10px red,
             0 0 25px red,
@@ -29,6 +29,7 @@
 </head>
 <body>
 
+    <!-- yahan image ka exact naam likho -->
     <img src="gift.png" alt="My Image">
 
 </body>
