--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <div class="container" id="container">
     <!-- 👇 Replace with your landscape image -->
-    <img src="png.jpg" alt="Landscape Image">
+    <img src="pic.jpg" alt="Landscape Image">
 </div>
 
 <script>
